--- a/app/src/main/res/layout/store_fragment.xml
+++ b/app/src/main/res/layout/store_fragment.xml
@@ -4,4 +4,10 @@
     android:layout_height="match_parent"
     android:background="#485293">
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="STORE" />
 </LinearLayout>
