--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:background="#2d76a8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/constraintLayout"
@@ -49,8 +49,8 @@
         <!--            tools:ignore="MissingConstraints" />-->
 
         <com.google.android.material.tabs.TabLayout
-            android:layout_width="wrap_content"
             android:id="@+id/header_tab"
+            android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:background="#2D76A8"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -58,7 +58,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:tabBackground="@drawable/tab_color_selector"
             app:tabIconTint="@color/white"
-            app:tabIndicatorColor="@color/white"
+            app:tabIndicatorColor="#16b1d4"
+            app:tabIndicatorHeight="2dp"
             app:tabIndicatorFullWidth="false"
             app:tabMode="scrollable"
             app:tabTextAppearance="@style/TextAppearance.AppCompat.Small"
